[project]
name = "doraemon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Max Nagy", email = "maxmunzel@me.com" }
]
dependencies = [
    "scipy>=1.10.1",
    "matplotlib>=3.7.3",
    "black>=24.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "doraemon:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/doraemon"]
